2010-02-02  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/AlcatelLucent.pm:
	new discovery parameter: AlcatelLucent::full-ifdescr

2010-01-27  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/AlcatelLucent.pm: new discovery module

2010-01-24  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover.pm (discover):
	snmp-max-msg-size is used now in discivery, not only in collector

2009-10-28  Jon Nistor  <nistor@snickers.org>

        * perllib/Torrus/DevDiscover/Arista.pm (discover):
        New discovery module: Arista Networks

2009-05-31  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Renderer/RRDtool.pm:
	new view parameters:
	disable-legend, disable-title, disable-vertical-label

2009-05-26  Jon Nistor  <nistor@snickrs.org>

	* perllib/Torrus/DevDiscover/Arbor_E.pm (discover):
	New discovery parameter: Arbor_E::disable-e30-hdd-logs,
        Arbor_E::enable-e30-mempool

2009-05-11  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/NetBotz.pm (discover):
	Discovery parameters: NetBotz::temp-max, NetBotz::humi-max,
	NetBotz::dew-max

2009-05-10  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/NetBotz.pm: new discovery module
	for NetBotz modular sensors

2009-05-07  Jon Nistor <nistor@snickers.org>

       * perllib/Torrus/DevDiscover/FTOS.pm
       New discovery module for Force10 Networks devices

2009-04-05  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* NEWS: Release 1.0.8

2008-11-29  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoIOS.pm (discover):
	New discovery parameter: CiscoIOS::short-device-comment

2008-11-06  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Collector/SNMP.pm (runCollector):
	Number of SNMP sessions per snmp_dispatcher is limited to 100