@@ -1,3 +1,8 @@
+2010-02-07  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm (buildConfig):
+	new selector action: NotifyPolicy
+
 2010-02-02  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* perllib/Torrus/DevDiscover/AlcatelLucent.pm:
